test/e2e/fixtures/http-basic/manifests.yaml
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: http-echo
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /backend/
  service: http-echo:8080
